# my_robot

./: README.md  Sonar_Sensors.ino  frames_2025-09-03_22.23.10.gv  frames_2025-09-04_00.20.38.gv  frames_2025-09-04_00.24.13.gv  frames_2025-09-04_00.31.11.gv  frames_2025-09-04_00.34.23.gv  frames_2025-09-04_00.50.56.gv  frames_2025-09-10_03.41.38.gv  frames_2025-09-10_04.48.21.gv  frames_2025-09-10_05.11.51.gv  frames_2025-09-10_05.49.12.gv  motor_control.ino  package.xml
config/: view_robot.rivz  view_robot.rviz
description/: gazebo_control.xacro  gazebo_parameters.xacro  odom_plugin.xacro  robot_core.xacro  robot_physical_properties.xacro
install/: local_setup.sh  setup.sh
install/my_robot/share/my_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot/share/my_robot/cmake/: my_robotConfig-version.cmake  my_robotConfig.cmake
install/my_robot/share/my_robot/config/: controllers.yaml  gazebo_params.yaml  joystick.yaml  parameters.yaml  ros_gz_bridge.yaml  ros_gz_bridge_ultrasonic.yaml  slam_params.yaml  twist_mux.yaml  view_robot.rivz
install/my_robot/share/my_robot/description/: gazebo_parameters.xacro  inertial_macros.xacro  materials.xacro  odom_plugin.xacro  robot.urdf.xacro  robot_core.xacro  robot_physical_properties.xacro  ros2_control.xacro  transmission.xacro
install/my_robot/share/my_robot/environment/: ament_prefix_path.dsv  path.dsv
install/my_robot/share/my_robot/launch/: ackermann_teleop.launch.py  controller.launch.py  gazebo.launch.py  joystick.launch.py  launch_sim.launch.py  rsp.launch.py  simple_test.launch.py  slam.launch.py  ultrasonic_slam.launch.py
install/my_robot/share/my_robot/worlds/: empty.world
log/: latest_build
robot_controller/: package.xml
robot_controller/config/: controllers.yaml  parameters.yaml
robot_controller/launch/: controller.launch.py
robot_controller/robot_controller/: ackermann_controller.py
robot_description/launch/: launch_sim.launch.py
robot_description/rviz/: view_robot.rviz
robot_description/urdf/: ros2_control.xacro  transmission.xacro
src/my_robot/: CMakeLists.txt  package.xml
src/my_robot/config/: parameters.yaml  ros_gz_bridge.yaml  slam_params.yaml
src/my_robot/description/: materials.xacro  odom_plugin.xacro  robot.urdf.xacro  ros2_control.xacro  sensors.xacro  transmission.xacro
src/my_robot/launch/: gazebo.launch.py  launch_sim.launch.py  rsp.launch.py  slam.launch.py  view.launch.py  xbox.launch.py
src/my_robot/my_robot/: ackermann_controller.py  sensor_fusion.py  srf08_publisher_backup.py
src/my_robot/rviz/: drive_botrviz.rviz  slam.rviz  view.rviz
src/my_robot/worlds/: obstacles.sdf
(+10 files in other folders)
